deleted curropted File

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-family: "Playfair Display", serif;
+  scroll-behavior: smooth;
+}
 @media (prefers-color-scheme: dark) {
   /* Force light mode even in dark mode */
   html {
