--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,43 @@ html {
   animation: slide 10s linear infinite; /* 10s is the duration of the sliding */
   transition: ease in out;
 }
+/* In your global CSS or in a file like `src/index.css` or `styles.css` */
+
+.drawer::-webkit-scrollbar {
+  width: 14px; /* Set the width of the vertical scrollbar */
+}
+
+.drawer::-webkit-scrollbar-thumb {
+  background-color: #8c2643; /* Set the color of the scrollbar thumb */
+  border-radius: 10px; /* Round the corners of the scrollbar thumb */
+  border: 2px solid #ccc; /* Add a border around the scrollbar thumb */
+}
+
+.drawer::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Set the background color of the scrollbar track */
+  border-radius: 10px; /* Round the corners of the track */
+}
+
+.drawer::-webkit-scrollbar-thumb:hover {
+  background-color: #f6f6f6; /* Darker thumb color on hover */
+}
+
+::-webkit-scrollbar {
+  width: 14px; /* Set the width of the vertical scrollbar */
+  padding: 0px 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #8c2643; /* Set the color of the scrollbar thumb */
+  border-radius: 10px; /* Round the corners of the scrollbar thumb */
+  border: 2px solid #ccc; /* Add a border around the scrollbar thumb */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Set the background color of the scrollbar track */
+  border-radius: 10px; /* Round the corners of the track */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #f6f6f6; /* Darker thumb color on hover */
+}
