--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 html {
-  font-family: "Playfair Display", serif;
+  font-family: "playfair display", serif;
   scroll-behavior: smooth;
 }
 @media (prefers-color-scheme: dark) {
@@ -46,9 +46,6 @@ html {
   border-radius: 10px; /* Round the corners of the track */
 }
 
-.drawer::-webkit-scrollbar-thumb:hover {
-  background-color: #f6f6f6; /* Darker thumb color on hover */
-}
 
 ::-webkit-scrollbar {
   width: 14px; /* Set the width of the vertical scrollbar */
@@ -66,9 +63,7 @@ html {
   border-radius: 10px; /* Round the corners of the track */
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background-color: #f6f6f6; /* Darker thumb color on hover */
-}
+
 .serHero {
   border-radius: 100% 0% 0% 100% / 24% 45% 55% 76%   ;
 }
