--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -73,3 +73,6 @@ html {
 .hero {
   border-radius: 100% 0% 100% 0% / 0% 70% 30% 100% ;
 }
+.service{
+  background: conic-gradient(at top right, #f3f4f6, #f4f4f5, #f43f5e);
+}
