--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -81,8 +81,9 @@ html {
   clip: rect(10px, 150px, 130px, 10px);
 }
 .text{
-  background-image: linear-gradient(to bottom right, #ffffff, #bfdbfe, #0ea5e9);
+  background-image: radial-gradient(ellipse at top left, #000000, #ffffff, #000000);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+  
 }
