Refactor components and styles for improved layout and user experience; update account details in payment section

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,9 +5,10 @@
 
 html {
   font-family: "playfair display", serif;
- 
+  overscroll-behavior: none;
   scroll-behavior: smooth;
 }
+
 @media (prefers-color-scheme: dark) {
   /* Force light mode even in dark mode */
   html {
